--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                                     <h3 class="listing-title">Ремонт моб. устройств</h3>
                                     <span class="overlay-mask"></span>
                                 </a>
-                                <a class="link centered" href="#" onclick="location.href = '/remont-mobilnyh.html#listings'"><span class="btn btn-info">ПОДРОБНЕЕ</span></a>
+                                <a class="link centered" href="#" onclick="location.href = 'remont-mobilnyh.html#listings'"><span class="btn btn-info">ПОДРОБНЕЕ</span></a>
                             </div>
 
                         </article>
@@ -271,7 +271,7 @@
                                     <h3 class="listing-title">Ремонт ноутбуков</h3>
                                     <span class="overlay-mask"></span>
                                 </a>
-                                <a class="link centered" href="#" onclick="location.href = '/remont-noutbukov.html#listings'"><span class="btn btn-info">ПОДРОБНЕЕ</span></a>
+                                <a class="link centered" href="#" onclick="location.href = 'remont-noutbukov.html#listings'"><span class="btn btn-info">ПОДРОБНЕЕ</span></a>
                             </div>
 
                         </article>
@@ -284,7 +284,7 @@
                                     <h3 class="listing-title">Ремонт техники Apple</h3>
                                     <span class="overlay-mask"></span>
                                 </a>
-                                <a class="link centered" href="#" onclick="location.href = '/remont-apple.html#listings'"><span class="btn btn-info">ПОДРОБНЕЕ</span></a>
+                                <a class="link centered" href="#" onclick="location.href = 'remont-apple.html#listings'"><span class="btn btn-info">ПОДРОБНЕЕ</span></a>
                             </div>
                         </article>
                         <article class="col-md-3 col-sm-6 listing-item rent">
@@ -294,7 +294,7 @@
                                     <h3 class="listing-title">Ремонт оргтехники</h3>
                                     <span class="overlay-mask"></span>
                                 </a>
-                                <a class="link centered" href="#" onclick="location.href = '/remont-orgtehniki.html#listings'"><span class="btn btn-info">ПОДРОБНЕЕ</span></a>
+                                <a class="link centered" href="#" onclick="location.href = 'remont-orgtehniki.html#listings'"><span class="btn btn-info">ПОДРОБНЕЕ</span></a>
                             </div>
                         </article>
                     </div>
@@ -377,32 +377,32 @@
                 <div class="section-title">
                     <h2>КАК НАС НАЙТИ?</h2>
                     <div class="spacer-25px"></div>
-                    <p class="lead">Схема проезда к сервисным центрам</p>
+                    <p class="lead">Схема проезда к сервисному центру</p>
                 </div>
 
                 <!-- Images -->
                 <div class="row">
-                    <div class="col-md-12 map_prof col-sm-6">
-                        <h4 id = "prof_traderoom"><i class="fa fa-flag-o"></i> Профсоюзов 14</h4>
-                        <h5><i class="fa fa-phone"></i> 211‒70‒36</h5>
+                   <!-- <div class="col-md-12 map_prof col-sm-6">
+                        <h4 id = "prof_traderoom"><i class="fa fa-flag-o"></i> Ленина 68 А</h4>
+                        <h5><i class="fa fa-phone"></i> 0(291) 2-63-06</h5>
                         <div class = "map_prof_img" onclick="yaCounter36652660.reachGoal('map');return true;">
-                            <script src="http://api-maps.yandex.ru/services/constructor/1.0/js/?sid=6Fazb3-eA8Ue3lONgUgvc3RfyFSxL6c6&amp;width=1136amp;height=432&amp;" type="text/javascript"></script>
+                            <iframe src="https://www.google.com/maps/d/embed?mid=117waKCafOoKxE9dR6knkzOKnnc8" width="640" height="480"></iframe>
                         </div>
-                    </div>
-                    <div class="col-md-6 map_mir col-sm-6">
-                        <h4 id = "mira_traderoom"><i class="fa fa-flag-o"></i> Мира 66</h4>
-                        <h5><i class="fa fa-phone"></i> 291‒37‒77</h5>
+                    </div> -->
+                    <div class="col-md-offset-3 col-md-6 map_mir col-sm-6">
+                        <h4 id = "mira_traderoom"><i class="fa fa-flag-o"></i> Ленина 68 А</h4>
+                        <h5><i class="fa fa-phone"></i> 0(291) 2-63-06</h5>
                         <div class = "map_mir_img" onclick="yaCounter36652660.reachGoal('map');return true;">
-                            <script src="http://api-maps.yandex.ru/services/constructor/1.0/js/?sid=mGGcdaNHmNmqz5Kc5vBHGKzAFTmDJIFC&amp;width=550&amp;height=212" type="text/javascript"></script>
+                            <iframe src="https://www.google.com/maps/d/embed?mid=117waKCafOoKxE9dR6knkzOKnnc8" width="550" height="212"></iframe>
                         </div>
                     </div>
-                    <div class="col-md-6  map_tel col-sm-6">
+                    <!--<div class="col-md-6  map_tel col-sm-6">
                         <h4 id = "tel_traderoom"><i class="fa fa-flag-o"></i> Телевизорная 1,ст. 39</h4>
                         <h5><i class="fa fa-phone"></i> 218‒00‒08</h5>
                         <div class = "map_mir_img" onclick="yaCounter36652660.reachGoal('map');return true;">
                             <script src="http://api-maps.yandex.ru/services/constructor/1.0/js/?sid=4-rk3zi4kfFKBbRXjfcuvYrD5CrR4im5&amp;width=550&amp;height=212" type="text/javascript"></script>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <!-- End images -->
             </div>
@@ -426,93 +426,6 @@
             </div>
         </section>
         <!-- End clients -->
-
-        <!-- FAQ-->
-        <section id="faq">
-            <div class="container">
-                <div class="section-title">
-                    <h2>ДРУГИЕ УСЛУГИ</h2>
-                    <div class="spacer-25px"></div>
-                </div>
-
-                <div class="row">
-
-                    <!-- Service item 2 -->
-                    <div class="col-md-4 col-sm-6">
-                        <div class="service-item">
-                            <img src = "img/also_4.png"/>
-                            <div class="service-item-text">
-                                <h3>Монтаж <br/>видеонаблюдения</h3>
-                                <h4>
-                                    Любой сложности!
-                                </h4>
-                                <p>
-
-                                    тел. 2-63-06
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- End service item 2 -->
-
-                    <!-- Service item 1 -->
-                    <div class="col-md-4 col-sm-6">
-                        <div class="service-item active_detail">
-                            <img src = "img/also_1.png"/>
-                            <div class="service-item-text">
-                                <h3>
-                                    Продажа 
-                                    <br/>
-                                    запчастей
-                                </h3>
-                                <h4>
-                                    7 дней в неделю!
-                                </h4>
-                                <p>тел. 232-15-25</p>
-
-                                <a href = "http://www.aldo-shop.ru/">aldo-shop.ru</a>
-
-                                <a href = "http://www.aldo-shop.ru/category.php?id_category=111094">
-                                    <div class = "button_buy_detail">
-                                        <i class="fa fa_third fa-shopping-cart"></i>Купить запчасти
-                                    </div>
-                                </a>
-
-                            </div>
-                        </div>
-                    </div>
-                    <!-- End service item 1 -->
-
-                    <!-- Service item 3 -->
-                    <div class="col-md-4 col-sm-6">
-                        <div class="service-item">
-                            <img src = "img/also_3.png"/>
-                            <div class="service-item-text">
-                                <h3>Заправка <br/>картриджей</h3>
-                                <p>
-                                    тел. 214-29-39
-                                    <br/>
-                                    <a href = "http://www.aldo24.ru/servis/price-servis.html"><i class="fa fa_price fa-download"></i>Скачать прайс</a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- End service item 3 -->
-                    <div class="col-sm-12 phone_footer text-center">
-                        <p>ВСЕ ВОПРОСЫ ПО ТЕЛЕФОНУ</p>
-                        <p><i class="fa fa-phone phone-icon"></i> 0(291)<b> 2-63-06</b></p>
-                    </div>
-                    <div class="col-sm-12 phone_footer text-center">
-                        <a href="http://aldo24.ru/attachments/027_027_Price - remont PC.doc">
-                            <div class = "download_all_price">
-                                СКАЧАТЬ ВЕСЬ ПРАЙС НА УСЛУГИ
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- End FAQ -->
 
         <!-- Footer -->
         <footer id="footer">
