--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand visible-sm visible-xs" href="#">Сервис "Альдо"</a>
+                    <a class="navbar-brand visible-sm visible-xs" href="#">Сервис "Омега"</a>
                     <div class = "clear"></div>
                     <div class ="collapse navbar-collapse" id = "bs-example-navbar-collapse-1">
                         <ul class = "nav navbar-nav">
@@ -349,9 +349,6 @@
                             <div class="service-item-text">
                                 <img src = "img/detail.png">
                                 <h3>Огромный выбор <br/>запчастей</h3>
-                                <a href = "http://www.aldo-shop.ru/category.php?id_category=111094">
-                                    <div class = "button_buy_detail">Купить запчасти</div>
-                                </a>
                             </div>
                         </div>
                     </div>
@@ -366,11 +363,6 @@
                 </div>
             </div>
         </section>
-
-
-
-    
-
         <!-- About -->
         <section id="about">
             <div class="container">
@@ -382,27 +374,13 @@
 
                 <!-- Images -->
                 <div class="row">
-                   <!-- <div class="col-md-12 map_prof col-sm-6">
-                        <h4 id = "prof_traderoom"><i class="fa fa-flag-o"></i> Ленина 68 А</h4>
-                        <h5><i class="fa fa-phone"></i> 0(291) 2-63-06</h5>
-                        <div class = "map_prof_img" onclick="yaCounter36652660.reachGoal('map');return true;">
-                            <iframe src="https://www.google.com/maps/d/embed?mid=117waKCafOoKxE9dR6knkzOKnnc8" width="640" height="480"></iframe>
-                        </div>
-                    </div> -->
                     <div class="col-md-offset-3 col-md-6 map_mir col-sm-6">
                         <h4 id = "mira_traderoom"><i class="fa fa-flag-o"></i> Ленина 68 А</h4>
                         <h5><i class="fa fa-phone"></i> 0(291) 2-63-06</h5>
-                        <div class = "map_mir_img" onclick="yaCounter36652660.reachGoal('map');return true;">
+                        <div class = "map_mir_img" onclick="yaCounter45184395.reachGoal('map');return true;">
                             <iframe src="https://www.google.com/maps/d/embed?mid=117waKCafOoKxE9dR6knkzOKnnc8" width="550" height="400"></iframe>
                         </div>
                     </div>
-                    <!--<div class="col-md-6  map_tel col-sm-6">
-                        <h4 id = "tel_traderoom"><i class="fa fa-flag-o"></i> Телевизорная 1,ст. 39</h4>
-                        <h5><i class="fa fa-phone"></i> 218‒00‒08</h5>
-                        <div class = "map_mir_img" onclick="yaCounter36652660.reachGoal('map');return true;">
-                            <script src="http://api-maps.yandex.ru/services/constructor/1.0/js/?sid=4-rk3zi4kfFKBbRXjfcuvYrD5CrR4im5&amp;width=550&amp;height=212" type="text/javascript"></script>
-                        </div>
-                    </div> -->
                 </div>
                 <!-- End images -->
             </div>
@@ -449,7 +427,7 @@
                     </div>
 
                     <div class = "col-md-3 col-sm-8">
-                        <button class="btn btn-info btn-lg" type="button" data-toggle="modal" data-target="#show_form" onclick="yaCounter36652660.reachGoal('obratka');return true;">Обратная связь</button>
+                        <button class="btn btn-info btn-lg" type="button" data-toggle="modal" data-target="#show_form" onclick="yaCounter45184395.reachGoal('obratka');return true;">Обратная связь</button>
                         <div id = "show_form" class="modal fade">
                             <div class="modal-dialog">
                                 <div class="modal-content">
@@ -501,37 +479,31 @@
 
         <!-- Yandex.Metrika counter -->
         <script type="text/javascript">
-                            (function (d, w, c) {
-                                (w[c] = w[c] || []).push(function () {
-                                    try {
-                                        w.yaCounter36652660 = new Ya.Metrika({
-                                            id: 36652660,
-                                            clickmap: true,
-                                            trackLinks: true,
-                                            accurateTrackBounce: true,
-                                            webvisor: true
-                                        });
-                                    } catch (e) {
-                                    }
-                                });
+            (function (d, w, c) {
+                (w[c] = w[c] || []).push(function() {
+                    try {
+                        w.yaCounter45184395 = new Ya.Metrika({
+                            id:45184395,
+                            clickmap:true,
+                            trackLinks:true,
+                            accurateTrackBounce:true
+                        });
+                    } catch(e) { }
+                });
 
-                                var n = d.getElementsByTagName("script")[0],
-                                        s = d.createElement("script"),
-                                        f = function () {
-                                            n.parentNode.insertBefore(s, n);
-                                        };
-                                s.type = "text/javascript";
-                                s.async = true;
-                                s.src = "https://mc.yandex.ru/metrika/watch.js";
+                var n = d.getElementsByTagName("script")[0],
+                    s = d.createElement("script"),
+                    f = function () { n.parentNode.insertBefore(s, n); };
+                s.type = "text/javascript";
+                s.async = true;
+                s.src = "https://mc.yandex.ru/metrika/watch.js";
 
-                                if (w.opera == "[object Opera]") {
-                                    d.addEventListener("DOMContentLoaded", f, false);
-                                } else {
-                                    f();
-                                }
-                            })(document, window, "yandex_metrika_callbacks");
+                if (w.opera == "[object Opera]") {
+                    d.addEventListener("DOMContentLoaded", f, false);
+                } else { f(); }
+            })(document, window, "yandex_metrika_callbacks");
         </script>
-        <noscript><div><img src="https://mc.yandex.ru/watch/36652660" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+        <noscript><div><img src="https://mc.yandex.ru/watch/45184395" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
         <!-- /Yandex.Metrika counter -->
 
 
