--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@
                     <div class="col-md-4 col-sm-6">
                         <div class="service-item">
                             <div class="service-item-text">
-                                <img src = "img/seven.png">
-                                <h3>Опыт в ремонте<br/>более 7-ми лет</h3>
+                                <img src = "img/ten.png">
+                                <h3>Опыт в ремонте<br/>более 10-и лет</h3>
                             </div>
                         </div>
                     </div>
