--- a/remont-mobilnyh.html
+++ b/remont-mobilnyh.html
@@ -215,10 +215,10 @@
 
 				 </div>	
                 <div class="section-description">
-					<p>На дисплее цветные разводы и полосы? Сломался USB-разъем? Телефон требует постоянной подзарядки? Механические повреждения и программные сбои – причины выхода из строя мобильных устройств. Экономьте время и деньги – обращайтесь в сервисный центр «Альдо». Наши специалисты осуществляют <b>ремонт телефонов и планшетов в Красноярске</b> на протяжении 7 лет. Гарантия того, что работа будет выполнена в срок, – большой выбор запчастей в наличии.
-					</p>	
-					<p>
-					Сервис «Альдо» осуществляет ремонт сотовых телефонов всех моделей и брендов: Samsung, Apple, Lenovo, Sony, Asus и многих других. 
+					<p>На дисплее цветные разводы и полосы? Сломался USB-разъем? Телефон требует постоянной подзарядки? Механические повреждения и программные сбои – причины выхода из строя мобильных устройств. Экономьте время и деньги – обращайтесь в сервисный центр «Омега». Наши специалисты осуществляют <b>ремонт телефонов и планшетов в Чадыр-Лунге</b> больше 10 лет. Гарантия того, что работа будет выполнена в срок, – большой выбор запчастей в наличии.
+					</p>
+                    <p>
+                    Сервис «Омега» осуществляет ремонт сотовых телефонов всех моделей и брендов: Samsung, Apple, Lenovo, Fly, Sony, Asus и многих других. 
 					</p>
 					<h3>Что требуется от вас?</h3>
 					<ol>
@@ -235,7 +235,7 @@
 					</ol>
 
 					<h3>Сроки и стоимость ремонтных работ</h3>
-					<p class="last-description">Сроки и стоимость ремонтных работ представлены во вкладках ниже.  Если вам нужен <a target="_blank" href="http://service.aldo24.ru/remont-apple.html">ремонт айфонов в Красноярске</a>, звоните!</p>						
+					<p class="last-description">Сроки и стоимость ремонтных работ представлены во вкладках ниже.  Если вам нужен <a target="_blank" href="remont-apple.html">ремонт айфонов в Чадыр-Лунге</a>, звоните!</p>						
 				</div>
 
                 <div class="listings-container">
@@ -368,7 +368,7 @@
                                                 Признаки неисправности: звука нет в принципе, или он сильно искажён,
                                                 ваш собеседник ничего не слышит, или сильны искажения. 
                                                 Причин этому несколько, например, попадание воды или механические повреждения.
-                                                Обращайтесь в <a target="_blank" href="http://service.aldo24.ru/">сервисный центр телефонов в Красноярске</a> – мы устраним неисправность.
+                                                Обращайтесь в <a target="_blank" href="index.html">сервисный центр телефонов в Чадыр-Лунге</a> – мы устраним неисправность.
                                             </td>
                                         </tr>
                                         <tr>
@@ -632,8 +632,7 @@
         </div>
         <!-- End preview panel -->		
 		
-		
-         <section id="advantages">
+       <section id="advantages">
             <div class="section-title">
                 <h2>Наши преимущества</h2>
                 <div class="spacer-25px"></div>
@@ -679,58 +678,36 @@
                             <div class="service-item-text">
                                 <img src = "img/detail.png">
                                 <h3>Огромный выбор <br/>запчастей</h3>
-                                <a href = "http://www.aldo-shop.ru/category.php?id_category=111094">
-                                    <div class = "button_buy_detail">Купить запчасти</div>
-                                </a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <div class="service-item">
                             <div class="service-item-text">
-                                <img src = "img/seven.png">
-                                <h3>Опыт в ремонте<br/>более 7-ми лет</h3>
+                                <img src = "img/ten.png">
+                                <h3>Опыт в ремонте<br/>более 10-и лет</h3>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-
-
-
-  
-
         <!-- About -->
         <section id="about">
             <div class="container">
                 <div class="section-title">
                     <h2>КАК НАС НАЙТИ?</h2>
                     <div class="spacer-25px"></div>
-                    <p class="lead">Схема проезда к сервисным центрам</p>
+                    <p class="lead">Схема проезда к сервисному центру</p>
                 </div>
 
                 <!-- Images -->
                 <div class="row">
-                    <div class="col-md-12 map_prof col-sm-6">
-                        <h4 id = "prof_traderoom"><i class="fa fa-flag-o"></i> Профсоюзов 14</h4>
-                        <h5><i class="fa fa-phone"></i> 211‒70‒36</h5>
-                        <div class = "map_prof_img" onclick="yaCounter36652660.reachGoal('map');return true;">
-                            <script src="http://api-maps.yandex.ru/services/constructor/1.0/js/?sid=6Fazb3-eA8Ue3lONgUgvc3RfyFSxL6c6&amp;width=1136amp;height=432&amp;" type="text/javascript"></script>
-                        </div>
-                    </div>
-                    <div class="col-md-6 map_mir col-sm-6">
-                        <h4 id = "mira_traderoom"><i class="fa fa-flag-o"></i> Мира 66</h4>
-                        <h5><i class="fa fa-phone"></i> 291‒37‒77</h5>
-                        <div class = "map_mir_img" onclick="yaCounter36652660.reachGoal('map');return true;">
-                            <script src="http://api-maps.yandex.ru/services/constructor/1.0/js/?sid=mGGcdaNHmNmqz5Kc5vBHGKzAFTmDJIFC&amp;width=550&amp;height=212" type="text/javascript"></script>
-                        </div>
-                    </div>
-                    <div class="col-md-6  map_tel col-sm-6">
-                        <h4 id = "tel_traderoom"><i class="fa fa-flag-o"></i> Телевизорная 1,ст. 39</h4>
-                        <h5><i class="fa fa-phone"></i> 218‒00‒08</h5>
-                        <div class = "map_mir_img" onclick="yaCounter36652660.reachGoal('map');return true;">
-                            <script src="http://api-maps.yandex.ru/services/constructor/1.0/js/?sid=4-rk3zi4kfFKBbRXjfcuvYrD5CrR4im5&amp;width=550&amp;height=212" type="text/javascript"></script>
+                    <div class="col-md-offset-3 col-md-6 map_mir col-sm-6">
+                        <h4 id = "mira_traderoom"><i class="fa fa-flag-o"></i> Ленина 68 А</h4>
+                        <h5><i class="fa fa-phone"></i> 0(291) 2-63-06</h5>
+                        <div class = "map_mir_img" onclick="yaCounter45184395.reachGoal('map');return true;">
+                            <iframe src="https://www.google.com/maps/d/embed?mid=117waKCafOoKxE9dR6knkzOKnnc8" width="550" height="400"></iframe>
                         </div>
                     </div>
                 </div>
@@ -757,93 +734,6 @@
         </section>
         <!-- End clients -->
 
-        <!-- FAQ-->
-        <section id="faq">
-            <div class="container">
-                <div class="section-title">
-                    <h2>ТАК ЖЕ МЫ ЗАНИМАЕМСЯ</h2>
-                    <div class="spacer-25px"></div>
-                </div>
-
-                <div class="row">
-
-                    <!-- Service item 2 -->
-                    <div class="col-md-4 col-sm-6">
-                        <div class="service-item">
-                            <img src = "img/also_4.png"/>
-                            <div class="service-item-text">
-                                <h3>Монтаж <br/>видеонаблюдения</h3>
-                                <h4>
-                                    Любой сложности!
-                                </h4>
-                                <p>
-
-                                    тел. 2-313-354
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- End service item 2 -->
-
-                    <!-- Service item 1 -->
-                    <div class="col-md-4 col-sm-6">
-                        <div class="service-item active_detail">
-                            <img src = "img/also_1.png"/>
-                            <div class="service-item-text">
-                                <h3>
-                                    Продажа 
-                                    <br/>
-                                    запчастей.
-                                </h3>
-                                <h4>
-                                    7 дней в неделю!
-                                </h4>
-                                <p>тел. 232-15-25</p>
-
-                                <a href = "http://www.aldo-shop.ru/">aldo-shop.ru</a>
-
-                                <a href = "http://www.aldo-shop.ru/category.php?id_category=111094">
-                                    <div class = "button_buy_detail">
-                                        <i class="fa fa_third fa-shopping-cart"></i>Купить запчасти
-                                    </div>
-                                </a>
-
-                            </div>
-                        </div>
-                    </div>
-                    <!-- End service item 1 -->
-
-                    <!-- Service item 3 -->
-                    <div class="col-md-4 col-sm-6">
-                        <div class="service-item">
-                            <img src = "img/also_3.png"/>
-                            <div class="service-item-text">
-                                <h3>Заправка <br/>картриджей</h3>
-                                <p>
-                                    тел. 214-29-39
-                                    <br/>
-                                    <a href = "http://www.aldo24.ru/servis/price-servis.html"><i class="fa fa_price fa-download"></i>Скачать прайс</a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- End service item 3 -->
-                    <div class="col-sm-12 phone_footer text-center">
-                        <p>ВСЕ ВОПРОСЫ ПО ТЕЛЕФОНУ</p>
-                        <p><i class="fa fa-phone phone-icon"></i> 0(291)<b> 2-63-06</b></p>
-                    </div>
-                    <div class="col-sm-12 phone_footer text-center">
-                        <a href="http://aldo24.ru/attachments/027_027_Price - remont PC.doc">
-                            <div class = "download_all_price">
-                                СКАЧАТЬ ВЕСЬ ПРАЙС НА УСЛУГИ
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- End FAQ -->
-
         <!-- Footer -->
         <footer id="footer">
             <div class="container">
@@ -866,7 +756,7 @@
                     </div>
 
                     <div class = "col-md-3 col-sm-8">
-                        <button class="btn btn-info btn-lg" type="button" data-toggle="modal" data-target="#show_form" onclick="yaCounter36652660.reachGoal('obratka');return true;">Обратная связь</button>
+                        <button class="btn btn-info btn-lg" type="button" data-toggle="modal" data-target="#show_form" onclick="yaCounter45184395.reachGoal('obratka');return true;">Обратная связь</button>
                         <div id = "show_form" class="modal fade">
                             <div class="modal-dialog">
                                 <div class="modal-content">
@@ -876,15 +766,14 @@
                                     <div class="modal-body">
                                         <div class="form-group">
                                             <form id="form" role="form">
-
                                                 <label for="name">Имя:</label>
                                                 <input type="text" name="name" class="form-control" required="required" placeholder="Имя"/>
 
                                                 <label for="name">Телефон:</label>
-                                                <input type="text" name="phone" class="form-control" required="required" placeholder="Телефон"/>
+                                                <input type="tel" name="phone" class="form-control" required="required" placeholder="Телефон"/>
 
                                                 <label for="name">Сообщение:</label>
-                                                <textarea class ="form-control" name="text" rows="4" placeholder="Введите сообшение"></textarea>
+                                                <textarea class ="form-control" name="text" rows="4" required="required" placeholder="Введите сообшение"></textarea>
 
                                                 <div class="modal-footer">
                                                     <input class="btn btn-info btn-lg" type="submit" value="Отправить сообщение"/>
@@ -902,7 +791,9 @@
         <!-- End footer -->
 
         <!-- Back to top -->
-        <a id="back-to-top" href="#" class="btn btn-primary back-to-top" role="button" title="" data-toggle="tooltip" data-placement="left"><span class="glyphicon glyphicon-chevron-up"></span></a>
+        <a id="back-to-top" href="#" class="btn btn-primary back-to-top" role="button" title="" data-toggle="tooltip" data-placement="left">
+            <span class="glyphicon glyphicon-chevron-up"></span>
+        </a>
         <!-- End back to top -->
 
         <!-- JavaScript -->
@@ -918,36 +809,30 @@
         <!-- Yandex.Metrika counter -->
         <script type="text/javascript">
             (function (d, w, c) {
-                (w[c] = w[c] || []).push(function () {
+                (w[c] = w[c] || []).push(function() {
                     try {
-                        w.yaCounter36652660 = new Ya.Metrika({
-                            id: 36652660,
-                            clickmap: true,
-                            trackLinks: true,
-                            accurateTrackBounce: true,
-                            webvisor: true
+                        w.yaCounter45184395 = new Ya.Metrika({
+                            id:45184395,
+                            clickmap:true,
+                            trackLinks:true,
+                            accurateTrackBounce:true
                         });
-                    } catch (e) {
-                    }
+                    } catch(e) { }
                 });
 
                 var n = d.getElementsByTagName("script")[0],
-                        s = d.createElement("script"),
-                        f = function () {
-                            n.parentNode.insertBefore(s, n);
-                        };
+                    s = d.createElement("script"),
+                    f = function () { n.parentNode.insertBefore(s, n); };
                 s.type = "text/javascript";
                 s.async = true;
                 s.src = "https://mc.yandex.ru/metrika/watch.js";
 
                 if (w.opera == "[object Opera]") {
                     d.addEventListener("DOMContentLoaded", f, false);
-                } else {
-                    f();
-                }
+                } else { f(); }
             })(document, window, "yandex_metrika_callbacks");
         </script>
-        <noscript><div><img src="https://mc.yandex.ru/watch/36652660" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+        <noscript><div><img src="https://mc.yandex.ru/watch/45184395" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
         <!-- /Yandex.Metrika counter -->
 
 
